--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ambii.site</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>ambiisite
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. int est dolor dolores repellendus vitae cumque quisquam eius praesentium perferendis natus quasi explicabo repudiandae repellat non nostrum, aliquid velit molestiae veritatis!
-        </p>
-    </h1>
+    <h1>ambiisite</h1>
+    <p>under construction</p>
 </body>
 </html>
